--- a/src/pages/features.html
+++ b/src/pages/features.html
@@ -29,7 +29,21 @@
 </head>
 <body>
   <header class="header">
+    <div class="logo">
+      <img src="../img/icons/logo.svg" alt="logo" class="image">
+      <a href="./features.html" class="logo-title">HooBank</a>
+    </div>
 
+    <nav class="navbar">
+      <ul class="navbar__lists">
+        <li class="navbar__list"><a href="../index.html" class="navbar__link">Home</a></li>
+        <li class="navbar__list"><a href="./pages/about.html" class="navbar__link">About Us</a></li>
+        <li class="navbar__list"><a href="./pages/features.html" class="navbar__link">Features</a></li>
+        <li class="navbar__list"><a href="./pages/solution.html" class="navbar__link">Solution <span
+              class="badge badge-dark">3</span></a></li>
+      </ul>
+    </nav>
+  
   </header>
 
   <main class="main">
@@ -37,8 +51,66 @@
   </main>
 
   <footer class="footer">
-    
+    <nav class="navbar">
+      <ul class="navbar__list">
+        <li class="navbar__list"><a href="../index.html" class="navbar__link">Home</a></li>
+        <li class="navbar__list"><a href="./pages/about.html" class="navbar__link">About Us</a></li>
+        <li class="navbar__list"><a href="./pages/features.html" class="navbar__link">Features</a></li>
+        <li class="navbar__list"><a href="./pages/solution.html" class="navbar__link">Solution <span class="badge badge-dark">3</span></a></li>
+
+      </ul>
+    </nav>
+
+    <nav class="navbar">
+      <h3 class="title-section">Usefull Links</h3>
+
+      <ul class="navbar__lists navbar__lists_footer">
+        <li class="navbar__list"><a href="#" class="navbar__link">Content</a></li>
+        <li class="navbar__list"><a href="#" class="navbar__link">How is works</a></li>
+        <li class="navbar__list"><a href="#" class="navbar__link">Greate</a></li>
+        <li class="navbar__list"><a href="#" class="navbar__link">Explore</a></li>
+      </ul>
+    </nav>
+
+    <nav class="navbar">
+      <h3 class="title-section">Community</h3>
+
+      <ul class="navbar__lists navbar__lists_footer">
+        <li class="navbar__list"><a href="#" class="navbar__link">Help Center</a></li>
+        <li class="navbar__list"><a href="#" class="navbar__link">Partners</a></li>
+        <li class="navbar__list"><a href="#" class="navbar__link">Suggestion</a></li>
+        <li class="navbar__list"><a href="#" class="navbar__link">Blog</a></li>
+      </ul>
+    </nav>
+
+    <nav class="navbar">
+      <h3 class="title-section">Partnership</h3>
+
+      <ul class="navbar__lists navbar__lists_footer">
+        <li class="navbar__list"><a href="#" class="navbar__link">Our partner</a></li>
+        <li class="navbar__list"><a href="#" class="navbar__link">Become</a></li>
+        <li class="navbar__list"><a href="#" class="navbar__link">Services</a></li>
+        <li class="navbar__list"><a href="#" class="navbar__link">Newletters</a></li>
+      </ul>
+    </nav>
+
   </footer>
+
+  <div class="copirights"> 
+    <div class="section__block_description">
+      <p class="title-description">Copirights | 2023 HooBank. All rights Reserved</p>
+    </div>
+
+    <div class="section__block_description">
+      <ul class="navbar__lists">
+        <li class="navbar__list"><a href="#" class="navbar__link"><img src="../img/icons/facebook.svg" alt="social"></a></li>
+        <li class="navbar__list"><a href="#" class="navbar__link"><img src="../img/icons/twitter.svg" alt="social"></a></li>
+        <li class="navbar__list"><a href="#" class="navbar__link"><img src="../img/icons/linkedin.svg" alt="social"></a></li>
+      </ul>
+
+    </div>
+  </div>
+
   
   <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered" role="document">
@@ -55,6 +127,49 @@
       </div>
     </div>
   </div>
+
+  <div class="left-block">
+    <nav class="navbar">
+      <ul class="navbar__lists navbar__lists_footer">
+        <li class="navbar__list">
+          <a href="./features.html" class="navbar__link">
+            <span class="material-icons">home</span>
+          </a>
+        </li>
+        <li class="navbar__list">
+          <a href="#" class="navbar__link">
+            <span class="material-icons">account_circle</span>
+          </a>
+        </li>
+        <li class="navbar__list">
+          <a href="#" class="navbar__link">
+            <span class="material-icons">fingerprint</span>
+          </a>
+        </li>
+        <li class="navbar__list">
+          <a href="#" class="navbar__link">
+            <span class="material-icons">favorite_border</span>
+          </a>
+        </li>
+        <li class="navbar__list">
+          <a href="#" class="navbar__link">
+            <span class="material-icons">visibility_off</span>
+          </a>
+        </li>
+        <li class="navbar__list">
+          <a href="#" class="navbar__link">
+            <span class="material-icons">drag_indicator</span>
+          </a>
+        </li>
+        <li class="navbar__list">
+          <a href="#" class="navbar__link">
+            <span class="material-icons">payment</span>
+          </a>
+        </li>
+      </ul>
+    </nav>
+  </div>
+
 
   <div class="btns btns__add btns__up btns__up_hide">Move Up</div>
 
