added slider and last blocks

--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -47,8 +47,15 @@
     
   </header>
 
-  <main class="main">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem inventore numquam reprehenderit ea sunt aperiam molestiae ducimus pariatur, ex, nisi odit corporis quam iure fuga excepturi quasi porro eos tenetur accusamus vel, cum odio amet. Incidunt quasi vitae rerum. Voluptatum neque, officia temporibus perferendis, iusto quisquam optio animi nesciunt saepe quos culpa. Ducimus, nobis omnis sint neque ipsa labore soluta cumque reiciendis enim beatae laboriosam. Iste velit commodi impedit aliquid dolore iure ipsa eaque adipisci! Pariatur officia a architecto cupiditate ipsam. Mollitia praesentium consequatur eaque repellendus recusandae incidunt, molestiae eveniet, rerum, iusto consectetur non autem repudiandae enim nemo totam obcaecati.
-    
+  <main class="main">
+  
+    <section class="container section section-1">
+    <div class="section__block">
+      <div class="section__block_description">
+    <h1 class="title-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellat optio repellendus laudantium quam quae deserunt.</h1>
+   </div> 
+  </div>
+  </section>
   </main>
 
   <footer class="footer">
